# code-notes

./: .gitignore  README.md
golang/text-to-img/: go.mod  main.go
java/: README.md
java/algorithm/: README.md  pom.xml
java/ass-kicker/: .env.example  .gitignore  README.md
java/bridgeway/: README.md  UserGuide.txt  pom.xml
java/flink-demo/: README.md  pom.xml
java/proxy-demo/: README.md  pom.xml
java/seata-demo/: README.md  pom.xml
java/simple-demo/: README.md  pom.xml
java/spring-websocket-without-stomp/: README.md  pom.xml
java/video-demo/: .gitignore  claude.md  startup.sh
java/webflux-demo/: README.md  pom.xml
java/xxl-job-demo/: README.md  docker-compose.yml  pom.xml
javascript/: README.md
python/celery-demo/: README.md  requirements.txt  test.py
python/intent-validation/: README.md  main.py
python/llamaindex-graphrag/: .env_template  docker-compose.yml  main.py  main_nebula.py  main_neo4j.py  pyproject.toml
python/microsoft-graphrag/: .gitignore  README.md
python/ms-graphrag/: .gitignore  README.md
python/oss-downloader/: .gitignore  README.md  requirements.txt
python/rag-eval/: config.py  evaluate.py  intent_classification_test.py  pyproject.toml  r.md  rag_client.py  test_rag_client.py
python/rag-eval/datasets/: test_dataset.csv
python/rag-eval/docs/: Ragas Migration from v0.3 to v0.4.md
python/rag-eval/experiments/: 20260104-161544-evaluation_results.csv  20260104-162516-evaluation_results.md  20260104-162814-evaluation_results.md  affectionate_brin.csv  affectionate_neumann.csv  awesome_boole.csv  brave_dijkstra.csv  fervent_engelbart.csv  festive_codd.csv  jovial_babbage.csv  mystifying_matsumoto.csv  pedantic_knuth.csv  pedantic_postel.csv
python/ragas-demo/: README.md  Ragas Migration from v0.3 to v0.4.md  lightrag.py  novel.txt  novel_outline.txt  novel_qa.csv  upload_documents.py  urls.csv
python/ragas-eval-demo/: first_experiment.py  main.py  result.csv  使用已有数据评估教程.md
python/simple-agent/: .env_template  pyproject.toml
python/simple-agent/resources/: system-prompt-template.txt
python/simple-agent/simple_agent/: __main__.py  chat_flow.py  chat_service.py  cli.py  context.py  file_generator.py  graph.py  models.py  prompt_loader.py  response.py
python/simple-agent/simple_agent/tools/: __init__.py  file_static_tools.py  tool_factory.py  tools.py
python/simple-agent/simple_agent/vector/: db.py
shell/: README.md  extra.sh
shell/git/: delete_branch.sh  delete_tags.sh  discard_local_changes.sh  gen_release_commond.sh  release.sh  (+1 more)
(+186 files in other folders)
