[project]
name = "simple-agent"
version = "0.0.1"
description = ""
license = { text = "MIT" }
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.4,<1.1.0)",
    "langchain-deepseek (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pyyaml (>=6.0,<7.0)",
    "click (>=8.0.0,<9.0.0)",
    "loguru (>=0.7.0,<1.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "dashscope (>=1.25.2,<2.0.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
